--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "com.umami.sometest",
-  "displayName": "Umami - SomeTest",
-  "version": "1.1.0",
-  "description": "Some description.",
-  "dependencies": {
-    "com.umami.common": "1.0.0",
-    "com.umami.commandhandler": "1.0.0",
-    "com.umami.analytics": "1.0.0",
-    "com.umami.unityremoteconfig": "1.0.0"
+  "name": "@madssharedmodules/testmodulepackage",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "exit 0"
   },
-  "author": {
-    "name": "Umami",
-    "email": "contact@umami-games.com",
-    "url": "https://www.umami-games.com"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MadsSharedModules/TestModulePackage.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MadsSharedModules/TestModulePackage/issues"
+  },
+  "homepage": "https://github.com/MadsSharedModules/TestModulePackage#readme"
 }
