--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "publishConfig": {
+   "@MadsSharedModules:registry": "https://npm.pkg.github.com"
+ },
   "name": "@madssharedmodules/testmodulepackage",
   "version": "1.0.0",
   "description": "",
