--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/MadsSharedModules/TestModulePackage.git"
   },
-  "author": "",
+  "author": "mads",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MadsSharedModules/TestModulePackage/issues"
